--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]
 jobs:
   msw-msvs:
-    runs-on: windows-${{ matrix.vsversion }}
+    runs-on: windows-2019
     name: wxMSW vs${{ matrix.vsversion }} ${{ matrix.configuration }} ${{ matrix.platform }}
     strategy:
       fail-fast: false
