--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -116,7 +116,7 @@ jobs:
         shell: powershell
         run: |
           pwd
-          dir 
+          # dir 
           mkdir build
           cd build
           cmake ../ -G "Visual Studio 17 2022" 
