--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -106,10 +106,14 @@ jobs:
       #         %{$_ -replace "define wxUSE_UNICODE_UTF8 0", "define wxUSE_UNICODE_UTF8 $use_utf8"} |
       #         Set-Content setup.h
       #       }
-      - name: Add MSBuild to PATH
-        uses: microsoft/setup-msbuild@v2
-        with:
-            vs-prerelease: true
+
+      - name: Setup VS2019
+        uses: warrenbuckley/Setup-MSBuild@v1
+
+      # - name: Add MSBuild to PATH
+      #   uses: microsoft/setup-msbuild@v2
+      #   with:
+      #       vs-prerelease: true
 
       - name: CMake
         working-directory: ${{ env.work_directory }}
@@ -119,7 +123,7 @@ jobs:
           # dir 
           mkdir build
           cd build
-          cmake ../ -G "Visual Studio 17 2022" 
+          cmake ../ -G "Visual Studio 16 2019" 
 
       # - name: Build
       #   working-directory: ${{ env.work_directory }}
